[gd_scene load_steps=9 format=2]

[ext_resource path="res://Floppa Folder/bingus_sprite.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Floppa Folder/bingus_sprite_red.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Enemy/Minecraft Alpha Damage Sound Effect.mp3" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.5, 27.25 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 118.072, 125.67 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemies"]]
z_index = 1
script = ExtResource( 2 )

[node name="BingusEdited" type="AnimatedSprite" parent="."]
position = Vector2( -1.90735e-06, 3 )
scale = Vector2( 0.215714, 0.228774 )
frames = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="BingusEdited"]
position = Vector2( -148.344, -13.1134 )
enabled = true
cast_to = Vector2( 0, 209.814 )
collision_mask = 11
script = SubResource( 2 )

[node name="EnemyArea2D" type="Area2D" parent="."]

[node name="EnemyAreaCollider" type="CollisionShape2D" parent="EnemyArea2D"]
position = Vector2( 0, 3.25 )
shape = SubResource( 3 )

[node name="EnemyCollider" type="CollisionShape2D" parent="." groups=["hitbox", "hurtbox"]]
position = Vector2( 0, 3 )
scale = Vector2( 0.237143, 0.228774 )
shape = SubResource( 1 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="EnemyArea2D" to="." method="_on_EnemyArea2D_area_entered"]
